<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DaftarAkun"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anda"
                android:textSize="40sp"
                android:layout_marginStart="30dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_5_shape"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:padding="8dp"
                        android:background="@null"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rectangle_5_shape"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <EditText
                        android:id="@+id/editTextTTL"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:hint="@string/Tanggal_Lahir"
                        android:inputType="date"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:padding="8dp"
                        android:background="@null"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rectangle_5_shape">

                <EditText
                    android:id="@+id/editTextisiemail"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:padding="8dp"
                    android:background="@null"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rectangle_5_shape">

                <EditText
                    android:id="@+id/editTextisipassword"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:hint="@string/masukan_password"
                    android:inputType="textPassword"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:padding="8dp"
                    android:background="@null"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <!-- Placeholder for spacing -->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_marginStart="55dp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#AF2222"
                    android:text="@string/buatakun"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
